--- a/FamilyAuto/Web.config
+++ b/FamilyAuto/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FamilyAuto-20160303115308.mdf;Initial Catalog=aspnet-FamilyAuto-20160303115308;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FamilyAuto-20160303115308.mdf;Initial Catalog=aspnet-FamilyAuto-20160303115308;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="FamilyAutoEntities" connectionString="metadata=res://*/Models.FamilyAuto.csdl|res://*/Models.FamilyAuto.ssdl|res://*/Models.FamilyAuto.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localDB)\MSSQLLocalDB;initial catalog=FamilyAuto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
