--- a/FamilyAuto/Web.config
+++ b/FamilyAuto/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  <add name="FamilyAutoEntities" connectionString="metadata=res://*/Models.FamilyAutoDB.csdl|res://*/Models.FamilyAutoDB.ssdl|res://*/Models.FamilyAutoDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localDB)\MSSQLlocalDB;initial catalog=FamilyAuto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="FamilyAutoEntities" connectionString="metadata=res://*/Models.FamilyAutoDB.csdl|res://*/Models.FamilyAutoDB.ssdl|res://*/Models.FamilyAutoDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localDB)\MSSQLlocalDB;initial catalog=FamilyAuto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
