--- a/FamilyAuto/Web.config
+++ b/FamilyAuto/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+  <add name="DefaultConnection" connectionString="Data Source=(localDB)\MSSQLlocalDB;Initial Catalog=FamilyAuto;Integrated Security=True;" providerName="System.Data.SqlClient" />
   <add name="FamilyAutoEntities" connectionString="metadata=res://*/Models.FamilyAutoDB.csdl|res://*/Models.FamilyAutoDB.ssdl|res://*/Models.FamilyAutoDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localDB)\MSSQLlocalDB;initial catalog=FamilyAuto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
