--- a/FamilyAuto/FamilyAuto.csproj
+++ b/FamilyAuto/FamilyAuto.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Models\Customers.cs">
       <DependentUpon>FamilyAutoDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DateSoldGroup.cs" />
     <Compile Include="Models\FamilyAutoDB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
