--- a/FamilyAuto/FamilyAuto.csproj
+++ b/FamilyAuto/FamilyAuto.csproj
@@ -422,6 +422,7 @@
     <Content Include="Views\Supplier\Index.cshtml" />
     <Content Include="Views\IMS\Statistics.cshtml" />
     <Content Include="Views\Home\Sent.cshtml" />
+    <Content Include="Views\Vehicle\_PartialVehicleContact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
