--- a/FamilyAuto/FamilyAuto.csproj
+++ b/FamilyAuto/FamilyAuto.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ServiceOrderController.cs" />
     <Compile Include="Controllers\SoldVehiclesController.cs" />
+    <Compile Include="Controllers\StaffController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\VehicleController.cs" />
@@ -230,6 +231,9 @@
       <DependentUpon>FamilyAutoDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AspNetUsers.cs">
+      <DependentUpon>FamilyAutoDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Comission.cs">
       <DependentUpon>FamilyAutoDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Customers.cs">
@@ -260,6 +264,9 @@
       <DependentUpon>FamilyAutoDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SoldVehicles.cs">
+      <DependentUpon>FamilyAutoDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Staff.cs">
       <DependentUpon>FamilyAutoDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Supplier.cs">
@@ -432,6 +439,11 @@
     <Content Include="Views\ServiceOrder\Details.cshtml" />
     <Content Include="Views\ServiceOrder\Edit.cshtml" />
     <Content Include="Views\ServiceOrder\Index.cshtml" />
+    <Content Include="Views\Staff\Create.cshtml" />
+    <Content Include="Views\Staff\Delete.cshtml" />
+    <Content Include="Views\Staff\Details.cshtml" />
+    <Content Include="Views\Staff\Edit.cshtml" />
+    <Content Include="Views\Staff\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
