--- a/FamilyAuto/packages.config
+++ b/FamilyAuto/packages.config
@@ -37,5 +37,7 @@
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="2.53.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="2.53.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
