Implemented few more tests, but now Gmail decided to screw me with the smtp server, can't send an email via my contact form anymore.

--- a/FamilyAuto/FamilyAuto.csproj
+++ b/FamilyAuto/FamilyAuto.csproj
@@ -316,6 +316,7 @@
     <Compile Include="UnitTests\TestArticleCRUD.cs" />
     <Compile Include="UnitTests\TestCustomerControllerBasics.cs" />
     <Compile Include="UnitTests\TestCustomerCRUD.cs" />
+    <Compile Include="UnitTests\TestEmailSending.cs" />
     <Compile Include="UnitTests\TestHomeControllerBasics.cs" />
     <Compile Include="UnitTests\TestIMSControllerBasics.cs" />
     <Compile Include="UnitTests\TestServiceOrderControllerBasics.cs" />
